--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Mi page</title>
+    <link rel="stylesheet" href="Css/estilos.css" type="text/css">
 </head>
 <body>
-
+    <h1>Bonjour/Hello</h1>
 </body>
 </html>
